--- a/01-HTML-Git-CSS/02-Homework/Develop/index.html
+++ b/01-HTML-Git-CSS/02-Homework/Develop/index.html
@@ -4,12 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Search Engine Optimization</title>
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Horiseon">
 </head>
 
 <body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+    <header>
+    <!--<Change_Div_to_Nav>-->    
+    <nav class="header">
+        <h1>Hori<span class="seo">seo</span>n</h1> <alt="Website-Logo"></alt>
         <div>
             <ul>
                 <li>
@@ -23,60 +28,76 @@
                 </li>
             </ul>
         </div>
-    </div>
-    <div class="hero"></div>
+    </nav>
+    <!--</Change_Div_to_Nav>-->   
+    </header>
+        <div class="hero" alt="A Team in a Room Viewing a Document" width="8688px" height="5792px"></div>
     <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        <section>
+        <div id="search-engine-optimization" class="search-engine-optimization">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook with SEO Diagram on Desk" {width:="7360px" height="4912px"} class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
+        </section>
+        <section>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="Featuring the Word &quot;Reputation&quot; on Screen" {width:="4404px" height="2877px"} class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
+        </section>
+        <section>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="Collage Social Media &amp; Technology Icons" {width:="5000px" height="3451px"} class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
+        </section>
     </div>
     <div class="benefits">
         <div class="benefit-lead">
+            <section>
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Lead Icon"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
+        </section>
         </div>
         <div class="benefit-brand">
+            <section>
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Awareness Icon" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
+        </section>
         </div>
         <div class="benefit-cost">
+            <section>
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="Cost-Management Icon"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
+        </section>
         </div>
     </div>
-    <div class="footer">
+    <footer>
+    <div class="footer" alt="Heart Icon &amp; Copywright Symbole">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
+</footer>
 </body>
 
 </html>
